@@ -5,7 +5,8 @@ Changelog
 2.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Optimize performance of `assigned_users()` method of an `AdminUnit`.
+  [buchi]
 
 
 2.4.0 (2015-12-11)
